Checkpoint 5 - cg7594d9cc

--- a/shopping_app_backend/.env.example
+++ b/shopping_app_backend/.env.example
@@ -1,13 +1,24 @@
-# Backend environment variables
-# Prefer setting DATABASE_URL directly.
-# If you only have db_connection.txt's line (e.g., 'psql postgresql://...'), you can put it into DB_CONNECTION_TXT.
-DATABASE_URL=postgresql+psycopg://appuser:dbuser123@localhost:5000/myapp
+# Backend environment variables (defaults for local development)
+
+# Database
+# IMPORTANT: DB port is standardized to 5000 (matches shopping_app_database/db_connection.txt)
+DATABASE_URL=postgresql://appuser:dbuser123@localhost:5000/myapp
+# Optional: if you only have db_connection.txt's line (e.g., 'psql postgresql://...'), you can put it here.
 DB_CONNECTION_TXT=psql postgresql://appuser:dbuser123@localhost:5000/myapp
 
-# SECURITY (set this in any non-dev environment)
-JWT_SECRET_KEY=change-me
+# Security
+# Prefer JWT_SECRET (task standard). JWT_SECRET_KEY is still supported for backward compatibility.
+JWT_SECRET=dev_jwt_secret_change_me
+JWT_SECRET_KEY=dev_jwt_secret_change_me
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXP_MINUTES=60
 
-# CORS: set to your frontend origin (comma-separated for multiple); use * only in development
+# URLs
+BACKEND_BASE_URL=http://localhost:3001
+FRONTEND_URL=http://localhost:3000
+
+# CORS
+# Comma-separated list of allowed origins.
+# Prefer CORS_ORIGINS (task standard). CORS_ALLOW_ORIGINS is still supported for backward compatibility.
+CORS_ORIGINS=http://localhost:3000
 CORS_ALLOW_ORIGINS=http://localhost:3000
